fix: additional dark mode tweaks
- fix bundle text color when not in dark mode
- add space for box-shadow on the left of the preview pane

--- a/src/scss/email.scss
+++ b/src/scss/email.scss
@@ -1,7 +1,8 @@
 .Nu.S3.aZ6 { //preview-pane
 	overflow: auto;
 	box-shadow: 0 3px 4px rgba(0,0,0,.24);
-	width: calc(100% - 1px);
+	margin-left: 2px;
+	width: calc(100% - 5px);
 	height: auto !important;  //need !important to override inline styles
 
 	&:not(.show-preview) {
@@ -27,7 +28,7 @@
 	}
 }
 
-.Nt.WY { //preview-pane-separator
+.Nf .Nt { //preview-pane-separator
 	display: none;
 }
 
